--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ssg/build/index.js",
-    "dev": "tsnd --respawn ssg/src/index.ts ",
+    "build": "tsc && node ssg/build/index.js",
+    "dev": "browser-sync start --server --serveStatic ./site --files 'site/*' ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,11 +21,12 @@
   },
   "homepage": "https://github.com/FernanEd/blog_ssg#readme",
   "dependencies": {
-    "@types/node": "^7.0.5",
     "markdown-it": "^12.0.6"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.0.1",
+    "@types/node": "^7.0.5",
+    "nodemon": "^2.0.7",
     "ts-node-dev": "^1.1.6"
   }
 }
